--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ roman-numerals==4.1.0
 roman-numerals-py==4.1.0
 snowballstemmer==3.0.1
 Sphinx==8.2.3
+sphinx-copybutton==0.5.2
 sphinx-rtd-theme==3.0.2
 sphinx_design==0.6.1
 sphinxcontrib-applehelp==2.0.0
